; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Neo6/extr_NDIS6.c_NeoInitPacketArray.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Neo6/extr_NDIS6.c_NeoInitPacketArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@NEO_MAX_PACKET_EXCHANGE = common dso_local global i64 0, align 8
@ctx = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NeoInitPacketArray() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %13, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @NEO_MAX_PACKET_EXCHANGE, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %16

6:                                                ; preds = %2
  %7 = call i32 (...) @NeoNewPacketBuffer()
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i64, i64* %1, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32 %7, i32* %12, align 4
  br label %13

13:                                               ; preds = %6
  %14 = load i64, i64* %1, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %1, align 8
  br label %2

16:                                               ; preds = %2
  ret void
}

declare dso_local i32 @NeoNewPacketBuffer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
